# ImgPreprocessor_lib

./: imageModule.py  test_lib.py
packaging_imagepreprocessor/: LICENCE  README.md  pyproject.toml  pyvenv.cfg
